--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -1,12 +1,12 @@
 files:
   "/etc/nginx/conf.d/elasticbeanstalk/custom.conf":
     mode: "644"
-    owner: "root"
-    group: "root"
+    owner: root
+    group: root
     content: |
-      client_max_body_size 100M;
-      keepalive_timeout 75s;
+      client_max_body_size 50M;
+      client_body_buffer_size 20M;
 
 container_commands:
   01_reload_nginx:
-    command: "systemctl restart nginx"
+    command: "service nginx reload"
