--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.947.0",
+    "@aws-sdk/lib-dynamodb": "^3.947.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -18,7 +20,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^4.2.1",
