--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/lib-dynamodb": "^3.947.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -22,7 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "moment-timezone": "^0.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
